--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -189,6 +189,7 @@
     <Manifest Include="settings.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cup.cmo" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
