Created abstract class System

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StepTimer.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
