--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -27,6 +27,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="System.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
