Input system with camera
Można poruszać kamerą przy użyciu myszy lub klawiatury (W,S,A,D,SPACE,lCTRL)

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -187,6 +187,7 @@
   <ItemGroup>
     <Image Include="cup.jpg" />
     <Image Include="directx.ico" />
+    <Image Include="roomtexture.dds" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest" />
