--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClInclude Include="DeviceResources.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h" />
     <ClInclude Include="Camera.h">
       <Filter>Inc</Filter>
     </ClInclude>
@@ -45,6 +44,9 @@
       <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="EntityManager.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
       <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
