Entity->Transform class fixed
Poprawiłem klasę Transform i Entity od teraz posiada wskaźnik do Transform a nie zmienną, bo referencja do obiektu się gubiła przy zwracaniu getTransform - teraz działa prawidłowo.

--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClInclude Include="DeviceResources.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h" />
     <ClInclude Include="Camera.h">
       <Filter>Inc</Filter>
     </ClInclude>
@@ -51,6 +50,9 @@
       <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="AudioSystem.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
       <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
