Added pussy and billboarding
Dodałem billboarding do naszej sceny, tj. mały box, który kręci się razem z ruchem naszej kamery, cały czas będąc do nas przodem.

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -288,6 +288,7 @@
     <ResourceCompile Include="resource.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="cat.DDS" />
     <Image Include="cup.jpg" />
     <Image Include="directx.ico" />
     <Image Include="roomtexture.dds" />
