--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClInclude Include="ComponentFactory.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -103,6 +109,12 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="ComponentFactory.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
