--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -145,6 +145,15 @@
     <ClInclude Include="MyGame.h">
       <Filter>Inc\Skinning</Filter>
     </ClInclude>
+    <ClInclude Include="Collision.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsComponent.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsSystem.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -251,6 +260,15 @@
     </ClCompile>
     <ClCompile Include="MyGame.cpp">
       <Filter>Src\Skinning</Filter>
+    </ClCompile>
+    <ClCompile Include="Collision.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsComponent.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsSystem.cpp">
+      <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
