Modyfikacje klas Camera, Input oraz utworzenie klasy Raycast
1. W klasie Camera dodano pola przechowujące bieżący rozmiar okna wraz z getterami, setterami.
2.  W klasie Input usunięto z pliku cpp definicje konstruktora, destruktora a zdefiniowano je w pliku nagłówkowym.
3.  Utworzono statyczną klasę Raycast ale jeszcze nie przetestowano czy działa poprawnie.

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="PhysicsSystem.h" />
+    <ClInclude Include="Raycast.h" />
     <ClInclude Include="RTTI.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="SkinnedModelMaterial.h" />
@@ -270,6 +271,7 @@
     <ClCompile Include="AudioSystem.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
+    <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="SceneNode.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
