--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -160,6 +160,9 @@
     <ClInclude Include="SceneManager.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Raycast.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -280,6 +283,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="SceneManager.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Raycast.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
