--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Raycast.h" />
     <ClInclude Include="RenderableComponent.h" />
+    <ClInclude Include="RenderableSystem.h" />
     <ClInclude Include="RTTI.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="SkinnedModelMaterial.h" />
@@ -274,6 +275,7 @@
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="RenderableComponent.cpp" />
+    <ClCompile Include="RenderableSystem.cpp" />
     <ClCompile Include="SceneNode.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
